--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -191,10 +191,12 @@
     enabled: false
     daemon_reload: true
     scope: user
-  loop:
-    - podman
-    - gitlab-runner
-    - pydocuum
+  loop: >
+    {{ ['podman', 'gitlab-runner', 'pydocuum']
+       | reject('equalto', 'pydocuum')
+       | list
+       if not gitlab_runner_enable_pydocuum | default(true) | bool
+       else ['podman', 'gitlab-runner', 'pydocuum'] }}
 
 - name: relax /dev/kvm permissions
   ansible.builtin.copy:
