Avoid using the fuse stager buildbox-casd

--- a/roles/gitlab-runner/tasks/main.yml
+++ b/roles/gitlab-runner/tasks/main.yml
@@ -157,6 +157,8 @@
     - "/srv/cas"
     quadlet_filename: buildbox-casd
     privileged: true
+    env:
+      BUILDBOX_STAGER: copy-or-link
     volumes:
       - casd_socket:/run/casd
       - casd_storage:/srv/cas
