Add sos.ca.gov to whitelist

--- a/roles/rspamd/files/local.d/whitelist.conf
+++ b/roles/rspamd/files/local.d/whitelist.conf
@@ -3,6 +3,8 @@ WHITELIST_SPF = {
     domains = [
         "redhat.com",
         "insurancefornonprofits.org",
+        "sos.ca.gov",
+        "bizfileonline.sos.ca.gov",
     ];
     score = -10.0;
 }
