--- a/roles/external_base/tasks/ubuntu.yml
+++ b/roles/external_base/tasks/ubuntu.yml
@@ -52,6 +52,13 @@
     line: 'Unattended-Upgrade::Automatic-Reboot-Time "01:00";'
     state: present
 
+- name: Enable automatic installation of general updates (-updates repository)
+  ansible.builtin.lineinfile:
+    path: /etc/apt/apt.conf.d/50unattended-upgrades
+    regexp: '^(//\s*)?"\${distro_id}:\${distro_codename}-updates";'
+    line: '"${distro_id}:${distro_codename}-updates";'
+    state: present
+
 - name: Add cron job for unattended-upgrades on Sunday 10 PM
   ansible.builtin.cron:
     name: "Run unattended-upgrades on Sunday 10 PM"
