--- a/roles/external_base/tasks/main.yml
+++ b/roles/external_base/tasks/main.yml
@@ -25,4 +25,4 @@
   when: ansible_distribution == "Ubuntu"
 
 - include_tasks: fedora.yml
-  when: ansible_distribution == "Fedora"
+  when: ansible_distribution in ["Fedora", "RedHat"]
