rspamd: Never reject mail from authenticated users

--- a/roles/rspamd/files/local.d/settings.conf
+++ b/roles/rspamd/files/local.d/settings.conf
@@ -10,5 +10,8 @@ authenticated {
   apply {
     groups_disabled = ["rbl", "spf"];
     symbols_disabled = ["BAYES_SPAM", "NEURAL_SPAM", "PHISHING"];
+    actions {
+      reject = null;
+    }
   }
 }
