Set become: false

--- a/playbooks/osuosl-openstack-oom.yml
+++ b/playbooks/osuosl-openstack-oom.yml
@@ -2,6 +2,7 @@
 - name: Check OSUOSL OpenStack runners and kick if down
   hosts: localhost
   gather_facts: false
+  become: false
   vars:
     osuosl_openstack_runners:
       - osuosl-1
